[workspace]
resolver = "2"
members = [
    "src/talker",
    "src/listener",
]

# In standalone mode, each package generates its own bindings via:
#   nros generate rust --generate-config --nano-ros-path <path>
# This creates a .cargo/config.toml with [patch.crates-io] entries
# pointing to the package-local generated/ directory.
