[package]
name = "native-rs-bridge-zenoh-to-dds"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "zenoh-to-dds"
path = "src/main.rs"

[dependencies]
# Phase 104 bridge example — two RMW backends linked into one
# binary. Each backend self-registers under its canonical name
# ("zenoh", "dds") via its POSIX ctor (Phase 104.A.1+2). The
# Executor opens against the primary backend ("zenoh") and the
# bridge code uses `node_builder.rmw("dds")` to open a second
# session for the egress side (Phase 104.C.3).
nros = { path = "../../../packages/core/nros", default-features = false, features = ["std", "rmw-cffi", "platform-posix"] }
nros-rmw-zenoh = { path = "../../../packages/zpico/nros-rmw-zenoh", features = ["std", "platform-posix", "ros-humble"] }
nros-rmw-dds = { path = "../../../packages/dds/nros-rmw-dds", default-features = false, features = ["std", "alloc", "platform-posix"] }
log = "0.4"
env_logger = "0.11"
